# FreeCAD-render

./: .gitmodules  .pre-commit-config.yaml  .pylintrc  Camera.py  InitGui.py  LICENSE  Materials.md  README.md  Render.py  camera.py  lights.py  materials.py  package.xml  pylintrc  renderables.py  rendererhandler.py  rendermaterials.py  renderutils.py
Render/: __init__.py  base.py  camera.py  coin.py  commands.py  constants.py  groundplane.py  help.py  imageviewer.py  lights.py  main.qml  material.py  materials.py  materialx.py  materialx_baker.py  materialx_downloader.py  package.xml  prefpage.py  project.py  pyproject.toml  rdrexecutor.py  rdrhandler.py  rdrmaterials.py  renderables.py  rendererhandler.py  renderingmesh.py  rendermaterial.py  rendermaterials.py  rendermesh.py  rendermesh_mixins.py  subcontainer.py  taskpanels.py  testmulti.py  texture.py  utils.py  uvmap_cube.py  vector.py  view.py  virtualenv.py  writeobj.py
docs/: CODE_OF_CONDUCT.md  Cameras.md  Contributing.md  EngineInstall.md  Lights.md  Materials.md  Projects.md  Views.md  materials_advanced.md
materials/: Aluminium.FCMat  Brass.FCMat  Carpaint.FCMat  Disney.FCMat  Emission.FCMat  Glass.FCMat  GlossyPlastic.FCMat  Gold.FCMat  GreenMarble.FCMat  Iron.FCMat  Magnetite.FCMat  Matte.FCMat  RoughPlastic.FCMat  Terrazzo.FCMat  Terrazzo019.FCMat  TextureBase.FCMat
renderers/: Appleseed.py  Cycles.py  Luxcore.py  Luxrender.py  Ospray.py  Pbrt.py  Povray.py  README.md  __init__.py
renderplugin/: .gitignore  README.md  pyproject.toml
renderplugin/src/renderplugin/: __init__.py  plugin_framework.py
(+373 files in other folders)
