[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renderplugin"
description = ""
version = "0.0.1"

[tool.hatch.build]
directory = "../wheelhouse"
target_config = "wheel"

[tool.hatch.build.targets.wheel]
packages = ["src/renderplugin"]
exclude = ["README.md"]

[tool.hatch.build.targets.sdist]
packages = ["src/renderplugin"]
exclude = ["README.md"]
